RESOLVED FIXED93529
[WK2] MiniBrowser crashes on quit if any windows were previously closed
https://bugs.webkit.org/show_bug.cgi?id=93529
Summary [WK2] MiniBrowser crashes on quit if any windows were previously closed
Alexey Proskuryakov
Reported 2012-08-08 14:48:13 PDT
Steps to reproduce: start MiniBrowser, close its window, quit it.
Attachments
proposed fix (6.29 KB, patch)
2012-08-08 16:29 PDT, Alexey Proskuryakov
sullivan: review+
Alexey Proskuryakov
Comment 1 2012-08-08 16:29:11 PDT
Created attachment 157327 [details] proposed fix
Alexey Proskuryakov
Comment 2 2012-08-08 16:48:11 PDT
Note You need to log in before you can comment on or make changes to this bug.