        [WK2] MiniBrowser crashes on quit if any windows were previously closed         https://bugs.webkit.org/show_bug.cgi?id=93529

Reviewed by John Sullivan.

        * MiniBrowser/mac/AppDelegate.h:
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate init]):
        (-[BrowserAppDelegate newWindow:]):
        (-[BrowserAppDelegate browserWindowWillClose:]):
        (-[BrowserAppDelegate applicationWillTerminate:]):
        (-[BrowserAppDelegate frontmostBrowserWindowController]):
        Track browser windows explicitly, not relying on [NSApp windows]. Closed windows
        are not automatically removed from the list until deallocated, so a refcounting
        error can result in working on a closed window.

        * MiniBrowser/mac/BrowserWindowController.m:
        (-[BrowserWindowController dealloc]): Moved code from -windowWillClose: here.
        Releasing data members is -dealloc's job.
        (-[BrowserWindowController windowWillClose:]): Notify BrowserAppDelegate that
        the window is no longer open. Autorelease self, making sure that WKView and
        then WebPageProxy get released.
        (-[BrowserWindowController applicationTerminating]): Don't release _webView.pageRef.
        WKView is responsible for its lifetime.
        (closePage): Ditto.



Canonical link: https://commits.webkit.org/111409@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125113 268f45cc-cd09-0410-ab3c-d52691b4dbfc